--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             </g>
         </svg>
     </app>
-    <!--[if IE]>
-    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <!--[if IE]><script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+<script src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"></script>
         <![endif]-->
     <script src="/_content/Blazui.Component/js/dom.js"></script>
     <script src="https://cdn.bootcss.com/codemirror/5.48.4/codemirror.min.js"></script>
